[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Car/Car.png" type="Texture" id=2]
[ext_resource path="res://scripts/windows/Player.gd" type="Script" id=3]
[ext_resource path="res://Images/Characters/Body.png" type="Texture" id=4]
[ext_resource path="res://Images/Characters/Head.png" type="Texture" id=5]
[ext_resource path="res://Audio/EngineSound.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 56.0

[node name="Player" type="RigidBody2D" groups=["Player"]]
collision_layer = 2
gravity_scale = 30.0
script = ExtResource( 3 )

[node name="WheelHolder" type="PinJoint2D" parent="."]
position = Vector2( -150, 100 )
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 2.5

[node name="Wheel" parent="WheelHolder" instance=ExtResource( 1 )]

[node name="WheelHolder2" type="PinJoint2D" parent="."]
position = Vector2( 109, 100 )
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 2.5

[node name="Wheel" parent="WheelHolder2" instance=ExtResource( 1 )]

[node name="Character" type="Sprite" parent="."]
position = Vector2( -52, -49 )
texture = ExtResource( 4 )

[node name="Head" type="RigidBody2D" parent="." groups=["Player"]]
position = Vector2( -53, -126 )
collision_layer = 4
mass = 0.15

[node name="Sprite" type="Sprite" parent="Head"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[node name="HeadSprint" type="PinJoint2D" parent="Head"]
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 9.0

[node name="Car" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -202, -55, -224, -44, -222, 73, -190, 99, 201, 99, 217, 74, 215, -9, 127, -45, 7, -55, -130, -59 )

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EngineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
